--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   },
   "author": "Evan Johnson",
   "license": "MIT",
-  "homepage": "https://github.com/evblurbs/react-native-md-textinput#readme"
+  "homepage": "https://github.com/evblurbs/react-native-md-textinput#readme",
+  "peerDependencies": {
+    "react-native": ">=0.46.0"
+  }
 }
